--- a/video-button/styles/main.css
+++ b/video-button/styles/main.css
@@ -4,4 +4,56 @@
 
 body {
   min-height: 100vh;
+  background-color: #212133;
+}
+
+.container{
+  margin-top: 150px;
+}
+
+
+
+.logotipo{
+  width: 150px;
+  margin: 0 auto; 
+  transform:translateY(60%);
+}
+
+
+.video-container {
+  height: 150px;
+  width: 300px;
+  overflow: hidden;
+  position: relative;
+  cursor:pointer;
+  border-radius: 15px;
+  border: 3px #404040 solid ;
+  background: rgb(0,0,0);
+  background: linear-gradient(360deg, rgba(0,0,0,1) 0%, rgba(33,33,51,1) 54%, (57,56,64,1) 100%);
+  transition: all .5s ease-in-out;
+}
+
+.video-container:hover{
+  transform: scale(1.10);
+}
+
+.video-container video {
+  min-width: 100%;
+  min-height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(50%) translateY(-50%);
+}
+
+.video-container:hover > video {
+  transform: translateX(-50%) translateY(-50%);
+}
+
+/* Just styling the content of the div, the *magic* in the previous rules */
+.video-container .caption {
+  z-index: 1;
+  position: relative;
+  text-align: center;
+  padding: 10px;
 }
