--- a/video-button/styles/main.css
+++ b/video-button/styles/main.css
@@ -31,10 +31,13 @@ body {
   background: rgb(0,0,0);
   background: linear-gradient(360deg, rgba(0,0,0,1) 0%, rgba(33,33,51,1) 54%, (57,56,64,1) 100%);
   transition: all .5s ease-in-out;
+  box-shadow: 0px 10px 12px 0px rgba(20,20,20,1);
 }
 
 .video-container:hover{
   transform: scale(1.10);
+  border: 3px #767676 solid ;
+  box-shadow: 0px 4px 12px -4px rgba(61,61,61,1);
 }
 
 .video-container video {
